# Codingame

./: .gitignore  Cargo.toml  Justfile
.github/workflows/: checks.yml  tests.yml
bot-programming/: README.md  flatten.py
bot-programming/codingame-2025-spring/: README.md  build.sh  dependency-reduced-pom.xml  pom.xml
bot-programming/codingame-2025-spring/bot/: Cargo.toml  data_types.rs  flatten.py  old_main.rs
bot-programming/codingame-2025-spring/bot/src/: bot.rs  game.rs  main.rs  main.rs.flattened  types.rs
bot-programming/codingame-2025-spring/config/: Boss.py  main.rs  statement_en.html.tpl  statement_fr.html.tpl  stub.txt
bot-programming/codingame-2025-spring/config/level2/: welcome_en.html  welcome_fr.html
bot-programming/codingame-2025-spring/config/level3/: welcome_en.html  welcome_fr.html
bot-programming/codingame-2025-spring/config/level4/: welcome_en.html  welcome_fr.html
bot-programming/ultimate-tic-tac-toe/: Cargo.toml
bot-programming/ultimate-tic-tac-toe/src/: game.rs  main.rs  main.rs.flattened  parse.rs  strat.rs  types.rs
game-lib/: Cargo.toml
game-lib/src/: lib.rs
game-lib/src/games/: c4.rs  connect_four.rs  mod.rs  tic_tac_toe.rs  ttt.rs  ult_tic_tac_toe.rs
game-lib/src/strategy/: common.rs  minimax.rs  mod.rs
game-lib/tests/: test_game_c4.rs  test_game_connect_four.rs  test_game_tic_tac_toe.rs  test_game_ttt.rs  test_game_ult_tic_tac_toe.rs  test_strat_minimax.rs
game-lib/tic-tac-toc/: Cargo.toml
game-lib/tic-tac-toc/src/: lib.rs
puzzles/one-billion-rows/: README.md
puzzles/one-billion-rows/src/: main.rs
(+55 files in other folders)
