[workspace]
members = [
    "puzzles/one-billion-rows",
    "game-lib/tic-tac-toc",
    "game-lib",
]
resolver = "3"

[workspace.dependencies]
games = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
debug = true
