[workspace]
members = [
    "puzzles/one-billion-rows",
    "game-lib",
    "bot-programming/ultimate-tic-tac-toe",
]
resolver = "3"

[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
debug = true
